remove num children

--- a/projects/ng-tree-diagram/src/lib/node/node.component.html
+++ b/projects/ng-tree-diagram/src/lib/node/node.component.html
@@ -45,7 +45,7 @@
           [innerHtml]="node.displayName"
           (blur)="onNodeBlur($event, node.guid)"
         ></span>
-        <span class="children-count"> ({{ node.childrenCount() }})</span>
+        <!--<span class="children-count"> ({{ node.childrenCount() }})</span>-->
       </div>
     </div>
   </div>
